--- a/MovingEstimator/MovingEstimator.csproj
+++ b/MovingEstimator/MovingEstimator.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper.cs" />
     <Compile Include="ILanguage.cs" />
     <Compile Include="Languages\English.cs" />
     <Compile Include="Languages\French.cs" />
